<resources>
    <string name="app_name" translatable="false">VpnDuck</string>
    <string name="action_settings">Settings</string>
    <string name="home_btn_choose_country">Choose country</string>
    <string name="home_pop_up_title_choose_country">Choose country</string>
    <string name="server_btn_connect">Connect</string>
    <string name="server_btn_disconnect">Disconnect</string>
    <string name="server_txt_ping">Ping:</string>
    <string name="server_txt_sessions">Sessions:</string>
    <string name="server_txt_speed">Speed:</string>
    <string name="server_txt_city">City:</string>
    <string name="server_error_loading_profile">Error loading profile</string>
    <string name="server_txt_status">Status connection:</string>
    <string name="server_not_connected">Not connected</string>
    <string name="server_list_more">Details</string>
    <string name="mbps">Mbps</string>
    <string name="ms">ms</string>
    <string name="loading_text">Loading...</string>
    <string name="downloading_csv_text">Downloading servers list...</string>
    <string name="parsing_csv_text">Parsing servers list...</string>
    <string name="csv_file_error">Problem with a file reading...</string>
    <string name="csv_file_error_parsing">Problem with a file parsing...</string>
    <string name="network_error">Network error...</string>
    <string name="successfully_loaded">Successfully loaded</string>
    <string name="action_about">About</string>
    <string name="action_refresh">Refresh servers list</string>
    <string name="action_share">Share</string>
    <string name="ok">Ok</string>
    <string name="network_error_message">Internet is not available, reconnect network and try again.</string>
    <string name="blocking_ads">Turn on ads filtering</string>
    <string name="more_servers">Get more servers</string>
    <string name="feature_not_available">This feature temporarily is not available</string>
    <string name="feature_not_available_without_perm">Without account information this feature is not available</string>
    <string name="unblock">Ads filtering</string>
    <string name="what_is_my_ip">What is my IP?</string>
    <string name="action_current_connection">Current connection</string>
    <string name="random_connection">Quick connection</string>
    <string name="total_servers">%1$d servers available in the local database now</string>
    <string name="loading_additional_servers">The loading of additional servers</string>
    <string name="current_servers_list">Current servers list</string>
    <string name="you_have_servers"><b>You have servers:</b></string>
    <string name="info_basic">%1$d basic</string>
    <string name="info_additional">%1$d additional</string>
    <string name="connect_on_start">Connect on start</string>
    <string name="connect_on_start_summary">Connect when application is started</string>
    <string name="choose_country_priority">Choose country priority</string>
    <string name="choose_country_priority_summary">If not enabled then use random connection</string>
    <string name="choose_country">Choose country</string>
    <string name="error_random_country">Server with priority country %1$s is not available</string>
    <string name="success_pop_up_title"><b>You are successfuly connected!
        \n Let\'s try it out?</b></string>
    <string name="open_playmarket">Open PlayMarket</string>
    <string name="open_browser">Open browser</string>
    <string name="show_my_desktop">Show my desktop</string>
    <string name="stay_to_try_something_else">Stay to try something else</string>
    <string name="automatic_switching">Automatic switching</string>
    <string name="automatic_switching_category">Automatic switching</string>
    <string name="automatic_switching_set_seconds">Set seconds</string>
    <string name="automatic_switching_summary">Automatic switching to the same country server after some seconds,
        if this connecting impossible.
    </string>
    <string name="choose_country_priority_category">Country priority</string>
    <string name="connect_on_start_category">Auto start on boot</string>
    <string name="try_another_server_text">Do you want try another server?</string>
    <string name="try_another_server_ok">Yes</string>
    <string name="try_another_server_no">No</string>
    <string name="traffic_in">Downloaded: %1$s</string>
    <string name="traffic_out">Uploaded: %1$s</string>
    <string name="traffic_totally"><b>Totally through the application</b></string>
    <string name="rating_title"><b>Thanks for using Easy VPN Free!</b></string>
    <string name="rating_sure">Sure</string>
    <string name="rating_not">Not really</string>
    <string name="rating_text">We are trying to make the app better!
    </string>
    <string name="share_text">
    </string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmark_delete">Delete</string>
    <string name="note_title"><b>Note</b></string>
    <string name="note_text">The list of the servers you will find
        in this application are from VPN Gate and are
        provided by <b>volunteers around the world</b>.
    </string>
    <string name="note_link">\nYou can provide your own computer as a VPN server to join this experiment.</string>
    <string name="go_to_premium_action_text">Go to premium!</string>
    <string name="premium_action_description_text">Get full app access without restrictions, ads, and unlock all Servers!</string>
    <string name="private_connection_text">Private Connection</string>
    <string name="premium_plans_title">Choose your plan</string>
    <string name="tile_private_connection_text">Private Connection</string>
    <string name="tile_unlock_all_servers_text">Unlock All Servers</string>
    <string name="tile_faster_then_before_text">Faster Then Before</string>
    <string name="tile_no_annoying_ads_text">No Annoying Ads:)</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="optimal_location">Optimal Location</string>
    <string name="mock_ip">37.128.90.90</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="mockspeed">--</string>
    <string name="kb_s">KB/s</string>
    <string name="click_to_connect">Click to Connect</string>
    <string name="servers">Servers</string>
    <string name="select_server">Select Servers</string>
    <string name="test_ip_address">325</string>
    <string name="hint_enter_username">Enter username</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="without_registration">Without registration</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="icon">icon</string>
    <string name="enter_with">enter with</string>
    <string name="notification_title">notific</string>
    <string name="sing_up">Sing up.</string>
    <string name="confirm">Confirm</string>
    <string name="facebook">Facebook</string>
    <string name="incorrect_email_address">invalid email address</string>
    <string name="captcha">captcha</string>
    <string name="current_password">Current Password</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="new_password">New password</string>
    <string name="enter_new_password">enter new password</string>
    <string name="burger_menu">burger menu</string>
    <string name="rate_us">Rate us:</string>
    <string name="log_out">Log out</string>
    <string name="change_password">Change password</string>
    <string name="confirm_message">Please verify your account. Confirmation email has been sent to you</string>
    <string name="title_activity_internet_unavailable">InternetUnavailable</string>
    <string name="title_activity_no_internet">NoInternetActivity</string>
</resources>
