<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:backgroundTint="@color/background2"
    app:cardCornerRadius="12dp"
    android:layout_marginBottom="7dp">

    <ImageView
        android:id="@+id/ivCountryIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:src="@drawable/ic_poland"
        android:importantForAccessibility="no" />

     <TextView
        android:id="@+id/tvCityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="110dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        android:text="AAAAAAAAAAAAAAAффффффффффффффффффффффффффффффффAAAA"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvIpAddressNotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/mock_ip"
        android:textColor="@color/dim" />

    <TextView
        android:id="@+id/tvSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_ip_address"
        android:layout_gravity="end"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/plus_jakarta_sans_regular"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvKbsDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_gravity="end"
        android:layout_marginTop="30dp"
        android:text="@string/kb_s"

        />
</androidx.cardview.widget.CardView>